# jinr_greenlab_supplr_canopen

./: CMakeLists.txt  JINR_HV_DAC_00010001.eds  Makefile  README.md  config.yaml  supplr.service
chai/: CMakeLists.txt  chai-cbunp.c  chai-lnx.c  chai-lnx.h  unican.h
cmd/: .gitignore  requirements.txt  setup.py
cmd/presets/: all_2V.txt
cmd/supplr/: api_supplr.py  config.py  convert_voltage.py  errors.py  supplr.py  supplr_calib_lib.py  supplr_cli_lib.py
gui/: gui.py  requirements.txt
gui/static/js/: monitor.js
gui/supplr_db/: api_db.py
gui/templates/: monitor.html
master/: CMakeLists.txt
master/CANopen/: logger.c  master_backinit.c  master_canid.c  master_client.c  master_cltrans.c  master_inout.c  master_lib.c  master_logfile.c  master_obdsdo_client.c  master_obj_errors.c  master_obj_sync.c  master_sdo_proc.c  system.c
master/application/: clparser.c  config_parser.c  master_application.c  master_can_nodes.c  master_events.c  master_globals.c  master_nmt_master.c  master_pdo_process.c  master_sdo_transfer.c  port_parser.c
master/include/: __application_defines.h  __logger_defines.h  config_defines.h  master_defines.h  master_defunc.h  master_genhead.h  master_globals.h  master_header.h  master_macros.h  master_structures.h  master_typedefs.h
soft/: libftd2xx-arm-v6-hf-1.4.27.tar  libftd2xx-arm-v7-sf-1.4.27.tar
supplr-server/: CMakeLists.txt  can.c  http.c  main.c
supplr-server/include/: can.h  common.h  http.h
